use linked list instead of array list